<resources>
    <string name="app_name">Meu Cartão Transporte</string>
    <string name="url_app">https://play.google.com/store/apps/details?id=br.com.disapps.meucartaotransporte</string>
    <string name="google_play_public_key">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAqW3dO9Bvfme9nBzVl9tUAKTBFbr6cC20GGmxWFrpcUp5dtdbzdKv7GinkKbMLwe7Ymxz0LupkqMTQmXL3Pc0R0jtYrYpOnrSSYP6i2u3Ln/uMxaOe4D68+nsJHRBylNesGsX61FQrY0PNXyGBoZ5yU6/8F9mPmDpQ00CM+ERVtSc2ZpXyMeBEVobsqpRkbpk3hO/7cxmeHDzhS17C7KNxAcaZrgjfazl0AjXAOjPtXdCYwm+lQnd/5DmqhJwYeoO59gd9gYbjt4orVrDFRMQReJNiKUlHQOr18fIzL+Y/GLE2os0vZhHZ+30kVpkTca5uv6nesTGw8+CpvwuBtCDSwIDAQAB</string>
    <string name="url_faq">https://meucartaotransporte.com.br/faq</string>
    <string name="url_privacy">https://meucartaotransporte.com.br/privacidade</string>
    <string name="url_balance_card">http://www.urbs.curitiba.pr.gov.br/guia_servico/9</string>
    <string name="email_contact">contato@meucartaotransporte.com</string>
    <string name="navigation_drawer_open">Abrir Menu</string>
    <string name="navigation_drawer_close">Fechar Menu</string>
    <string name="cards">Cartões</string>
    <string name="lines">Linhas</string>
    <string name="shapes">Trajetos</string>
    <string name="itineraries">Itinerários</string>
    <string name="share">Compartilhar</string>
    <string name="remove_ads">Remover Anúncios</string>
    <string name="settings">Configurações</string>
    <string name="about_app">Sobre o App</string>
    <string name="search_schedules">Consultar Horários</string>
    <string name="points">Pontos</string>
    <string name="schedules_point">schedules</string>
    <string name="help">Ajuda</string>
    <string name="register_card">Cadastrar Cartão</string>
    <string name="card_balance">Saldo Cartão</string>
    <string name="card_extract">Extrato Cartão</string>
    <string name="search_lines">Pesquisar Linhas</string>
    <string name="map">Mapa</string>
    <string name="data_usage">Uso de Dados e Atualizações</string>
    <string name="contact_subject">Contato pelo aplicativo Meu Cartão Transporte</string>
    <string name="copyright">© 2015–2018 Meu Cartão Transporte. \n Todos os direitos reservados.</string>
    <string name="develop">Desenvolvido por Diefferson Santos</string>
    <string name="init_data">Inicializando Base de Dados</string>
    <string name="contact_us">Fale Conosco</string>
    <string name="privacy">Termos e Política de Privacidade</string>
    <string name="faq">FAQ</string>
    <string name="update">Atualização</string>
    <string name="update_lines">Atualização Linhas</string>
    <string name="update_schedules">Atualização Schedules</string>
    <string name="update_now">Atualizar Agora</string>
    <string name="itinerary_unavailable">Itinerário não disponível</string>
    <string name="shape_unavailable">Trajeto não disponível</string>
    <string name="schedule_unavailable">Horários não disponíveis</string>
    <string name="automatic_update">O processo de atualização automática de dados é feito de forma assíncrona utilizando somente conexão WIFI</string>
    <string name="my_cards">Meus Cartões</string>
    <string name="quick_find">Consulta Rápida</string>
    <string name="favorites">Favoritos</string>
    <string name="initial_screen">Tela Inicial</string>
    <string name="card_name">Nome Cartão</string>
    <string name="card_code">Código Cartão</string>
    <string name="cpf">CPF</string>
    <string name="useful_day">Dia Útil</string>
    <string name="saturday">Sábado</string>
    <string name="sunday">Domingo</string>
    <string name="type">Tipo</string>
    <string name="card_type">Tipo: %1$s</string>
    <string name="card_balance_value">R$: %1$s</string>
    <string name="state">Estado</string>
    <string name="card_state">Estado: %1$s</string>
    <string name="updated">Atualizado em</string>
    <string name="card_updated">Atualizado em: %1$s </string>
    <string name="bus_updated">Atualizado: %1$s </string>
    <string name="last_updated">Última atualização: %1$s </string>
    <string name="direction">Sent. %1$s </string>
    <string name="rate_app">Avaliar App </string>
    <string name="browse_card">Consultar Cartão</string>
    <string name="browse_schedules">Consultar Horários</string>
    <string name="btn_about">Sobre</string>
    <string name="btn_share">Compartilhar</string>
    <string name="btn_register">Cadastrar</string>
    <string name="btn_download_data">Baixar Dados</string>
    <string name="btn_complete_download">Continuar</string>
    <string name="loading">Carregando…</string>
    <string name="version">Versão:</string>
    <string name="date_update_base">Data de Atualização da Base:</string>
    <string name="invalid_name">Nome inválido!</string>
    <string name="invalid_code">Código inválido!</string>
    <string name="invalid_cpf">CPF inválido!</string>
    <string name="required_field">Campo obrigatório!</string>
    <string name="card_already_registered">Cartão já cadastrado!</string>
    <string name="error_save_card">Não foi possível salvar o cartão.</string>
    <string name="generic_error">Ocorreu um erro, verifique sua conexão com a internet e tente novamente mais tarde.</string>
    <string name="line_not_found">Nenhuma linha encontrada.</string>
    <string name="error_update_base">Erro ao atualizar Base</string>
    <string name="error_download">Não foi possível baixar dados, verifique sua conexão com a internet e tente novamente.</string>
    <string name="error_delete_card">Erro ao excluir cartão</string>
    <string name="msg_offline">Você esta offline, por favor conecte-se a uma rede.</string>
    <string name="ops">Algo deu Errado!</string>
    <string name="no_connection">Sem Conexão</string>
    <string name="success_save_card">Cartão salvo com sucesso</string>
    <string name="download_complete">Base dados atualizada com sucesso!</string>
    <string name="base_updated">Base atualizada com sucesso!</string>
    <string name="all_right_text">Base Atualizada com sucesso!\nVamos começar.</string>
    <string name="card_deleted">Cartão excluido com sucesso</string>
    <string name="all_right">Tudo Certo!</string>
    <string name="action_options">Opções</string>
    <string name="action_share">Compartilhar via:</string>
    <string name="action_share_text">Baixe agora o aplicativo Meu Cartão Transporte https://meucartaotransporte.com.br</string>
    <string name="action_share_subject">Aplicativo Meu Cartão Transporte</string>
    <string name="action_add_card">Novo Cartão</string>
    <string name="download_data">É necessário realizar o download da base inicial de onibus.\n Certifique-se de estar conectado à internet e clique em Baixar Dados.</string>
    <string name="no_cards">Sem cartões cadastrados \nClique no botão + para cadastrar um cartão.</string>
    <string name="no_favorites">Sem favoritos</string>
    <string name="update_message">*Os valores podem conter um atraso de até 48 horas para a atualização.</string>
    <string name="data_origin">As informações são consultadas diretamente ao sistema da URBS, disponível no endereço http://www.urbs.curitiba.pr.gov.br, podendo ter um atraso de até 48 horas para atualizações de dados como  saldo e extrato do cartão.</string>
    <string name="contact_text">Para informações, críticas ou sugestões entre em contato conosco pelo email contato@meucartaotransporte.com.br</string>
    <string name="faq_description">Precisa de ajuda com o aplicativo? Acesse nosso FAQ </string>
    <string name="updating_base">Atualizando base de dados</string>
    <string name="welcome">Bem Vindo!</string>
    <string name="search_hint">Pesquisar…</string>
    <string name="delete">Excluir</string>
    <string name="delete_card">Excluir Cartão</string>
    <string name="msg_delete_card">Deseja realmente excluir este cartão?</string>
    <string name="almost">Quase Lá!</string>
    <string name="almost_text">Terminando de atualizar os dados, um botão para iniciar aparecerá em instantes.</string>
    <string name="next">Próximo</string>
    <string name="skip">Pular</string>
    <string name="title_slide0">Inicializando base de dados</string>
    <string name="desc_slide0">Enquanto isso navegue nas novidades do Meu Cartão Transporte.Ao concluir botão iniciar aparecerá no canto esquerdo.</string>
    <string name="start">Iniciar</string>
    <string name="title_slide1">Saldo do Cartão Transporte</string>
    <string name="desc_slide1">Acesso de forma simples e rápida ao saldo atualizado de seu cartão transporte.</string>
    <string name="title_slide2">Extrato do Cartão Transporte</string>
    <string name="desc_slide2">Controle dos seus gastos com o cartão com extrato detalhado com as últimas operações.</string>
    <string name="title_slide3">Linhas e Horários</string>
    <string name="desc_slide3">Todas as linhas da cidade de Curitiba de forma simples e intuitiva.</string>
    <string name="title_slide4">Próximos Horários</string>
    <string name="desc_slide4">Próximos horários de seu onibus de acordo com o dia e horário de seu celular.</string>
    <string name="title_slide5">Tabela Horária</string>
    <string name="desc_slide5">Quadro de horário completo do seu ônibus.</string>
    <string name="title_slide6">Itinerários</string>
    <string name="desc_slide6">Lista detalhada de paradas de sua linha.</string>
    <string name="title_slide7">Trajetos</string>
    <string name="desc_slide7">Veja no mapa o trajeto de sua linha.</string>
    <string name="title_slide8">Pontos no Trajeto</string>
    <string name="desc_slide8">Posicionamento de cada ponto da linha em seu trajeto no mapa.</string>
    <string name="title_slide9">Linhas em tempo real</string>
    <string name="desc_slide9">Veja o posicionamento de cada veículo da linha em tempo real</string>
    <string name="download_now">Baixar Agora</string>
    <string name="updating_shapes">Atualizando Trajetos…</string>
    <string name="updating_lines">Atualizando Linhas…</string>
    <string name="curitiba">Curitiba</string>
    <string name="metropolitan_region">Região Metropolitana</string>
    <string name="update_points">Atualizar Itinerários</string>
    <string name="update_shapes">Atualizar Trajetos</string>
    <string name="download_itineraries">Baixar Itinerários</string>
    <string name="download_shapes">Baixar Trajetos</string>
    <string name="item_card_code">Codigo:</string>
    <string name="item_card_cpf">CPF:</string>
    <string name="item_card_status">Estado:</string>
    <string name="item_card_type">Tipo:</string>
    <string name="item_card_balance">Saldo:</string>
    <string name="balance">Saldo</string>
    <string name="extract">Extrato</string>
    <string name="consult">Consultar</string>
    <string name="unknow_error">Algo deu errado</string>
    <string name="extract_date">Data:&#160;</string>
    <string name="extract_place">Local:&#160;</string>
    <string name="balance_extract">Saldo:&#160;</string>
    <string name="value_extract">Valor:&#160;</string>
    <string name="fav_line">Favoritar Linha</string>
    <string name="see_shape">Ver Trajeto</string>
    <string name="see_points">Ver Pontos</string>
    <string name="see_vehicles">Ver Veículos</string>
    <string name="vehicles_line">Veículos Linha</string>
    <string name="points_line">Pontos Linha</string>
    <string name="no_results">Nenhum resultado encontrado</string>
    <string name="mailto">mailto:contato@meucartaotransporte.com.br</string>
    <string name="mail_subject">Contato via Aplicativo Meu Cartão Transporte</string>
    <string name="known_more">Saiba Mais</string>
    <string name="card_link_message">Sem resultado para o dados informados, confira seus dados ou clique para saber mais.</string>
    <string name="alert">Eita!!</string>
    <string name="no_local_data_description">Parece que você ainda não baixou esses dados.\n Vamos fazer o isso agora?</string>
    <string name="puts">Putz!</string>
</resources>