<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_cards"
            android:icon="@drawable/cards"
            android:title="@string/cards" />

        <item
            android:id="@+id/nav_lines"
            android:icon="@drawable/bus"
            android:title="@string/lines" />

        <item
            android:id="@+id/nav_shapes"
            android:icon="@drawable/map"
            android:title="@string/shapes" />
        <item
            android:id="@+id/nav_itineraries"
            android:icon="@drawable/map_marker"
            android:title="@string/itineraries" />

    </group>

    <item android:title="@string/about_app">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_ads"
                android:icon="@drawable/remove_ads"
                android:title="@string/remove_ads" />

        </menu>
    </item>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/settings" />
    </group>

</menu>
