<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_fav_line"
        android:icon="@drawable/star_outline"
        android:title="@string/fav_line"
        app:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:showAsAction="ifRoom"
        android:orderInCategory="1"
        android:menuCategory="secondary"/>

    <item android:id="@+id/action_shape_line"
        android:icon="@drawable/map"
        android:title="@string/see_shape"
        app:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:showAsAction="ifRoom"
        android:orderInCategory="1"
        android:menuCategory="secondary"/>

    <item android:id="@+id/action_points_line"
        android:icon="@drawable/map_marker"
        android:title="@string/see_points"
        app:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:showAsAction="ifRoom"
        android:orderInCategory="1"
        android:menuCategory="secondary"/>

    <item android:id="@+id/action_vehicles_line"
        android:icon="@drawable/bus"
        android:title="@string/see_vehicles"
        app:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:showAsAction="ifRoom"
        android:orderInCategory="1"
        android:menuCategory="secondary"/>

</menu>
