<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rate_app"
                style="@style/AppTheme.SettingsItem"
                android:id="@+id/rateApp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#c5c5c5"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq"
                style="@style/AppTheme.SettingsItem"
                android:id="@+id/faq" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#c5c5c5"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacy"
                style="@style/AppTheme.SettingsItem"
                android:id="@+id/privacy"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#c5c5c5"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact_us"
                style="@style/AppTheme.SettingsItem"
                android:id="@+id/contact"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#c5c5c5"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_app"
                style="@style/AppTheme.SettingsItem"
                android:id="@+id/about"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#c5c5c5"/>

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
