<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/tela_inicial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                style="@style/AppTheme.SettingsItem">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:textStyle="normal"
                    android:text="@string/initial_screen"
                    style="@style/AppTheme.TextTitle"/>

                <TextView
                    android:id="@+id/tela_inicial_value"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    tools:text="@string/cards"
                    style="@style/AppTheme.SettingsValue"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/divider"/>

            <TextView
                android:id="@+id/data_usage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/data_usage"
                style="@style/AppTheme.SettingsItem"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/divider"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help"
                style="@style/AppTheme.SettingsItem"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/divider"/>

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
