<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="br.com.disapps.meucartaotransporte.ui.quickFind.QuickFindViewModel"/>
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/card_code_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/AppTheme.InputLayout"
                app:error="@{!viewModel.isValidCode ? @string/invalid_code : null}">

                <EditText
                    android:id="@+id/card_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={viewModel.code}"
                    android:hint="@string/card_code"
                    android:inputType="number" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/card_cpf_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/AppTheme.InputLayout"
                app:error="@{!viewModel.isValidCpf ? @string/invalid_cpf : null}">

                <EditText
                    android:id="@+id/card_cpf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:text="@={viewModel.cpf}"
                    android:hint="@string/cpf"
                    android:inputType="number"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_quick_find"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/AppTheme.InputLayout"
                android:background="@color/normalButton"
                android:text="@string/consult"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </ScrollView>
</layout>